<resources>
    <string name="app_name">IceBreak</string>
    <string name="ach_name">Achievements</string>
    <string name="action_create_account">Or, create an account</string>
    <string name="reg_username">Username</string>
    <string name="reg_firstname">First name</string>
    <string name="reg_lastname">Last name</string>
    <string name="reg_password">Password</string>
    <string name="reg_password2">Confirm Password</string>
    <string name="reg_email">Email Address</string>
    <string name="msg_not_in_event">You are currently not logged in to any event</string>
    <string name="msg_no_rewards">No Rewards</string>
    <string name="msg_no_achievements">No Achievements</string>
    <string name="msg_no_events">No events were found.</string>
    <string name="facebook_app_id">279070875809816</string>
    <string name="fb_login_protocol_scheme">fb279070875809816</string>

    <string name="range_hint_text">Max distance.</string>

    <string name="ctxt_menu_filter">Filter Events</string>
    <string name="ctxt_menu_range">Range</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_legal">Legal</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <!-- Theme settings -->
    <string name="pref_header_themes">Themes</string>

    <!-- Data & Sync settings -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <!-- Notification settings -->
    <string name="pref_header_notifications">Notifications</string>

    <!-- Privacy -->
    <string name="pref_header_privacy">Privacy</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="loudness">
        <item>I don\'t care</item>
        <item>Quiet room</item>
        <item>Restaurant</item>
        <item>Bar</item>
        <item>Theatre</item>
        <item>Nightclub</item>
        <item>Concert</item>
    </string-array>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="contacts_temp">
        <item>Bruce Wayne</item>
        <item>Tony Stark</item>
        <item>Clark Kent</item>
        <item>Peter Parker</item>
        <item>Sergey Brin</item>
        <item>Bill Gates</item>
        <item>Linus Torvalds</item>
        <item>Steve Jobs</item>
    </string-array>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_event_search">EventSearch</string>
    <string name="title_activity_event_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_test">Sign in</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_edit__profile">Edit Profile</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>

    <string-array name="gndr">
        <item>Men</item>
        <item>Women</item>
        <item>Both</item>
    </string-array>

    <string name="title_activity_other__profile">Other_Profile</string>
    <string name="title_activity_rewards">RewardsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- QR Code scanner stuff -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_event_timeline">Map</string>
</resources>
