<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".screens.SignUpActivity"
    android:background="@drawable/gradient_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/app_bar_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="45dp"
                android:textColor="@color/white"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:indeterminate="false"/>

        <EditText
            android:id="@+id/email_sign_up"
            android:layout_width="@dimen/text_box_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/reg_email"
            android:typeface="monospace"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/username_sign_up"
            android:layout_width="@dimen/text_box_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/reg_username"
            android:typeface="monospace"
            android:inputType="text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/password_sign_up"
                android:layout_width="@dimen/text_box_size"
                android:layout_height="wrap_content"
                android:hint="@string/reg_password"
                android:typeface="monospace"
                android:inputType="textPassword"/>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="@dimen/dp_size_40"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/password_sign_up"
                android:layout_alignRight="@+id/password_sign_up"/>

        </RelativeLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="@dimen/text_box_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:textSize = "@dimen/button_text_size"
            android:background="@drawable/buttonshape"
            android:text="Sign Up"
            android:fontFamily="monospace"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up with Facebook"
            android:layout_marginTop="15dp"
            android:paddingTop="@dimen/init_fb_login_pad"
            android:paddingBottom="@dimen/init_fb_login_pad"
            android:layout_marginRight="@dimen/init_fb_login_pad"
            android:layout_marginLeft="@dimen/init_fb_login_pad"
            android:layout_gravity="center_horizontal|center_vertical" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>